--- a/resources/template/report/index.html
+++ b/resources/template/report/index.html
@@ -80,23 +80,23 @@
                         <div class="panel-body">
                         <table id="generalInfos" class="table table-bordered table-condensed " >
                             <tr>
-                                <td>File:</td>
-                                <td>${testFile!""}</td>
+                                <td>Product</td>
+                                <td>WSO2 Enterprise Service Bus - 4.9.0</td>
                             </tr>
-                            <tr>
-                                <td>Start Time:</td>
-                                <td>${beginDate!""}</td>
-                            </tr>
-                            <tr>
-                                <td>End Time:</td>
-                                <td>${endDate!""}</td>
-                            </tr>
-                            <#if overallFilter?has_content>
-                                <tr>
-                                    <td>Filter for computing:</td>
-                                    <td>${overallFilter}</td>
-                                </tr>
-                            </#if>
+                            <!--<tr>-->
+                                <!--<td>Start Time:</td>-->
+                                <!--<td>${beginDate!""}</td>-->
+                            <!--</tr>-->
+                            <!--<tr>-->
+                                <!--<td>End Time:</td>-->
+                                <!--<td>${endDate!""}</td>-->
+                            <!--</tr>-->
+                            <!--<#if overallFilter?has_content>-->
+                                <!--<tr>-->
+                                    <!--<td>Filter for computing:</td>-->
+                                    <!--<td>${overallFilter}</td>-->
+                                <!--</tr>-->
+                            <!--</#if>-->
                             <!--<#if seriesFilter?has_content>-->
                                 <!--<tr>-->
                                     <!--<td>Filter for display:</td>-->
@@ -125,7 +125,7 @@
                 <div class="col-lg-6" >
                     <div class="panel panel-default" style="text-align:center;">
                         <div class="panel-heading">
-                           <p class="dashboard-title">Result Summary</p>
+                           <p class="dashboard-title">Error Summary</p>
                         </div>
                            <div class="panel-body">
                             <div class="flot-chart" style="height:200px;">
@@ -138,7 +138,7 @@
             <div class="col-lg-12">
                 <div class="panel panel-default" style="text-align:center;">
                        <div class="panel-heading" >
-                           <p class="dashboard-title">Request Details</p>
+                           <p class="dashboard-title">Request Details - Errors</p>
                        </div>
                 <div class="panel-body ">
                     <section class="col-md-12 table-responsive">
